Add partial of line-on-side component

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -25,6 +25,7 @@
 // COMPONENT
 ////////////////////////////////////////////////////
 
+@import 'component/line-on-side';
 @import 'component/header';
 
 ////////////////////////////////////////////////////
