Add portrait component with its style

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -27,6 +27,7 @@
 
 @import 'component/line-on-side';
 @import 'component/header';
+@import 'component/portrait';
 
 ////////////////////////////////////////////////////
 // LAYOUT
