Edit vairable partial file

--- a/scss/helper/_variable.scss
+++ b/scss/helper/_variable.scss
@@ -2,24 +2,7 @@
 // COLOR
 ////////////////////////////////////////////////////
 
-$purple-heart	: #7828B4;
-$electric-violet: #9013FE;
-$concrete		: #F2F2F2;
-$gallery		: #EBEBEB;
-$alto			: #D7D7D7;
-$dusty-gray		: #9B9B9B;
-$white			: #FFFFFF;
-$black			: #000000;
 
-$color__header_bg			: $purple-heart;
-$color__logo				: $white;
-$color__placeholder			: $dusty-gray;
-$color__search-bar_mobile	: $gallery;
-$color__body_bg				: $concrete;
-$color__shadow				: $alto;
-$color__card				: $white;
-$color__title				: $electric-violet;
-$color__category_bg			: $alto;
 
 ////////////////////////////////////////////////////
 // TYPOGRAPHY
@@ -46,5 +29,4 @@ $font__weight: (
 // SIZE
 ////////////////////////////////////////////////////
 
-$head-bar__height_default	: 69px;
-$head-bar__height_medium	: 92px;
+$portrait__size: 76px;
