--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,8 +3,15 @@ BASIC
 -----------------------------------------------------*/
 
 body {
-    font-family: 'NotoSans', sans-serif, 'NotoSansCJK', '微軟正黑體', 'Microsoft JhengHei';
-    max-width: 768px;
-    margin: 0 auto;
+    font-family : 'NotoSans', sans-serif, 'NotoSansCJK', '微軟正黑體', 'Microsoft JhengHei';
+    max-width   : 768px;
+    margin      : 0 auto;
+}
+
+main {
+    max-width       : 516px;
+    margin          : 0 auto;
+    padding-left    : 30px;
+    padding-right   : 30px;
 }
 
