Add personal info HTML structure and styles

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -28,6 +28,7 @@
 @import 'component/line-on-side';
 @import 'component/header';
 @import 'component/portrait';
+@import 'component/icon-with-text';
 
 ////////////////////////////////////////////////////
 // LAYOUT
