--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -36,3 +36,17 @@ header .line-on-side:after {
     text-transform  : uppercase;
     margin          : 32px auto;
 }
+
+/*--Icon With Text Style--*/
+
+.icon-with-text {
+    font-weight: 400;
+    color: rgba($color: #000000, $alpha: 0.87);
+    font-size: 14px;
+    a:link,
+    a:visited,
+    a:active,
+    a:hover {
+        color: inherit;
+    }
+}
