--- a/scss/component/_icon-with-text.scss
+++ b/scss/component/_icon-with-text.scss
@@ -1,3 +1,8 @@
+/*-----------------------------------------------------
+ICON WITH TEXT
+-----------------------------------------------------*/
+
+/*--Icon With Text--*/
 .icon-with-text {
 	li {
 		@extend %center_vertical;
