Add education HTML structure and style

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -29,6 +29,7 @@
 @import 'component/header';
 @import 'component/portrait';
 @import 'component/icon-with-text';
+@import 'component/education';
 
 ////////////////////////////////////////////////////
 // LAYOUT
