Add skill component

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -30,6 +30,7 @@
 @import 'component/portrait';
 @import 'component/icon-with-text';
 @import 'component/education';
+@import 'component/skill';
 
 ////////////////////////////////////////////////////
 // LAYOUT
