--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,9 +3,10 @@ BASIC
 -----------------------------------------------------*/
 
 body {
-    font-family : 'NotoSans', sans-serif, 'NotoSansCJK', '微軟正黑體', 'Microsoft JhengHei';
-    max-width   : 768px;
-    margin      : 0 auto;
+    font-family     : 'NotoSans', sans-serif, 'NotoSansCJK', '微軟正黑體', 'Microsoft JhengHei';
+    max-width       : 768px;
+    margin          : 0 auto;
+    padding-bottom  : 64px;
 }
 
 main {
