--- a/scss/helper/_variable.scss
+++ b/scss/helper/_variable.scss
@@ -2,6 +2,9 @@
 // COLOR
 ////////////////////////////////////////////////////
 
+//Skill level bar color
+$skill__bar_color: #4A4A4A;
+
 
 
 ////////////////////////////////////////////////////
@@ -21,6 +24,23 @@ $font__weight: (
 	light	: 300,
 	regular : 400,
 	bold	: 700,
+);
+
+
+
+////////////////////////////////////////////////////
+// SKILL SCORE
+////////////////////////////////////////////////////
+
+$skill__score: (
+	sketch      : 80%,
+	html        : 90%,
+	css         : 90%,
+	sass        : 80%,
+	jquery      : 70%,
+	javascript  : 80%,
+	react-js 	: 70%,
+	vue-js 		: 70%,
 );
 
 
