--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -76,3 +76,18 @@ header .line-on-side:after {
     color      : rgba($color: #000000, $alpha: 0.54);
     font-weight: 400;
 }
+
+/*--Section | skill--*/
+.skill__name {
+    font-size   : 14px;
+    font-weight : 400;
+    color       : rgba($color: #000000, $alpha: 0.87);
+	text-align  : left;
+}
+
+.skill__score {
+	font-size   : 12px;
+    font-weight : 400;
+    color       : rgba($color: #000000, $alpha: 0.38);
+	text-align  : right;
+}
