Add fluid drid mixin

--- a/scss/helper/_mixin.scss
+++ b/scss/helper/_mixin.scss
@@ -61,3 +61,24 @@
     @warn "Breakpoint mixin supports: windows_m, windows_l";
   }
 }
+
+
+
+////////////////////////////////////////////////////
+// FLUID GRID
+////////////////////////////////////////////////////
+
+@mixin fluid-grid($column, $gutter: 16px) {
+	$percent: 100% / $column;
+	$numerator: $column - 1;
+	width: calc( #{$percent} - (#{$gutter} * #{$numerator} / #{$column}));
+	margin-bottom: #{$gutter};
+	@if $column > 1 {
+		&:nth-child(n) {
+			margin-left: #{$gutter};
+		}
+		&:nth-child(#{$column}n+1) {
+			margin-left: 0;
+		}
+	}
+}
