Add responsive behavior to skill item

--- a/scss/helper/_variable.scss
+++ b/scss/helper/_variable.scss
@@ -50,3 +50,14 @@ $skill__score: (
 ////////////////////////////////////////////////////
 
 $portrait__size: 76px;
+
+
+
+////////////////////////////////////////////////////
+// BREAKPOINT
+////////////////////////////////////////////////////
+
+$breakpoint: (
+	windows_m  : 728px,
+	windows_l  : 500px,
+);
