Add education layout component

--- a/scss/component/_education.scss
+++ b/scss/component/_education.scss
@@ -14,10 +14,7 @@ EDUCATION
     height      : 30px;
     width       : 64px;
     padding-left: 8px;
-}
-
-.education__info_main {
-    // @extend %center_vertical;
+    line-height : 30px;
 }
 
 .education__info {
