--- a/scss/helper/_mixin.scss
+++ b/scss/helper/_mixin.scss
@@ -48,18 +48,22 @@
 // BREAKPOINTS
 ////////////////////////////////////////////////////
 
+// @mixin breakpoint($point) {
+//   @if $point == windows_m {
+//     @media (min-width: map-get($breakpoint, $point)) { @content; }
+//   }
+ 
+//   @else if $point == windows_l {
+//     @media (min-width: map-get($breakpoint, $point)) { @content; }
+//   }
+ 
+//   @else {
+//     @warn "Breakpoint mixin supports: windows_m, windows_l";
+//   }
+// }
+
 @mixin breakpoint($point) {
-  @if $point == windows_m {
-    @media (min-width: map-get($breakpoint, $point)) { @content; }
-  }
- 
-  @else if $point == windows_l {
-    @media (min-width: map-get($breakpoint, $point)) { @content; }
-  }
- 
-  @else {
-    @warn "Breakpoint mixin supports: windows_m, windows_l";
-  }
+  @media (min-width: $point) { @content; }
 }
 
 
