--- a/scss/helper/_variable.scss
+++ b/scss/helper/_variable.scss
@@ -57,7 +57,4 @@ $portrait__size: 76px;
 // BREAKPOINT
 ////////////////////////////////////////////////////
 
-$breakpoint: (
-	windows_m  : 728px,
-	windows_l  : 500px,
-);
+$breakpoint: 500px;
