--- a/scss/layout/_skill-section.scss
+++ b/scss/layout/_skill-section.scss
@@ -5,7 +5,7 @@ SKILL SECTION
 /*--Section | skill section--*/
 
 .section__skill .section__item {	
-	@include breakpoint(windows_l) {		
+	@include breakpoint($breakpoint) {		
 		//display: flex
 		-webkit-display        : flex;
 		-moz-display           : flex;
@@ -21,7 +21,7 @@ SKILL SECTION
 }
 
 .section__skill .section__item {
-	@include breakpoint(windows_l) {		
+	@include breakpoint($breakpoint) {		
 		-webkit-flex-wrap: wrap;
 		-moz-flex-wrap   : wrap;
 		-ms-flex-wrap    : wrap;
@@ -30,7 +30,7 @@ SKILL SECTION
 }
 
 .skill__item {
-	@include breakpoint(windows_l) {	
+	@include breakpoint($breakpoint) {	
 		@include fluid-grid(2, $gutter: 32px);
 		margin-right     : auto;
 	}
