--- a/scss/application.scss
+++ b/scss/application.scss
@@ -31,6 +31,7 @@
 @import 'component/icon-with-text';
 @import 'component/education';
 @import 'component/skill';
+@import 'component/work';
 
 ////////////////////////////////////////////////////
 // LAYOUT
