--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -51,7 +51,7 @@ header .line-on-side:after {
     }
 }
 
-/*--Education--*/
+/*--Education Section Style--*/
 
 .education__date {
     color       : white;
@@ -77,7 +77,7 @@ header .line-on-side:after {
     font-weight: 400;
 }
 
-/*--Section | skill--*/
+/*--Skill Section Style--*/
 .skill__name {
     font-size   : 14px;
     font-weight : 400;
@@ -90,4 +90,25 @@ header .line-on-side:after {
     font-weight : 400;
     color       : rgba($color: #000000, $alpha: 0.38);
 	text-align  : right;
+}
+
+/*--Work Section Style--*/
+
+.work__heading {
+    font-weight     : 500;
+    font-size       : 14px;
+    letter-spacing  : 0.25;
+    line-height     : 28px;
+    color           : rgba($color: #000000, $alpha: 0.87);
+}
+
+.work__duration {
+    @extend .work__heading;
+    font-style: italic;
+}
+
+.work__description {
+    @extend .work__heading;
+    color      : rgba($color: #000000, $alpha: 0.54);
+    font-weight: 400;
 }
