--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -7,9 +7,10 @@ TYPOGRAPHY
 /*--Header Style--*/
 
 header {
-    text-transform  : uppercase;
+    @extend %text__transform__uppercase;
     text-align      : center;
     color           : white;
+    letter-spacing  : 2px;
 }
 
 header .title {
@@ -18,7 +19,7 @@ header .title {
 
 .caption {
     font-size       : 12px;
-    word-spacing    : 40%;
+    letter-spacing  : 1px;
 }
 
 header .line-on-side:before,
@@ -29,25 +30,27 @@ header .line-on-side:after {
 /*--Main Style--*/
 
 .subtitle {
+    @extend %text__transform__uppercase;
     font-weight     : 500;
     font-size       : 14px;
+    letter-spacing  : 1px;
     color           : rgba($color: #000000, $alpha: 0.54);
     text-align      : center;
-    text-transform  : uppercase;
     margin          : 32px auto;
 }
 
 /*--Icon With Text Style--*/
 
 .icon-with-text {
-    font-weight : 400;
-    color       : rgba($color: #000000, $alpha: 0.87);
-    font-size   : 14px;
+    font-weight     : 400;
+    color           : rgba($color: #000000, $alpha: 0.87);
+    font-size       : 14px;
+    letter-spacing  : 1px;
     a:link,
     a:visited,
     a:active,
     a:hover {
-        color   : inherit;
+        color       : inherit;
     }
 }
 
@@ -59,11 +62,7 @@ header .line-on-side:after {
 }
 
 .education__heading {
-    font-weight     : 500;
-    font-size       : 14px;
-    letter-spacing  : 0.25;
-    line-height     : 28px;
-    color           : rgba($color: #000000, $alpha: 0.87);
+    @extend %font_heading;
 }
 
 .education__duration {
@@ -77,29 +76,10 @@ header .line-on-side:after {
     font-weight: 400;
 }
 
-/*--Skill Section Style--*/
-.skill__name {
-    font-size   : 14px;
-    font-weight : 400;
-    color       : rgba($color: #000000, $alpha: 0.87);
-	text-align  : left;
-}
-
-.skill__score {
-	font-size   : 12px;
-    font-weight : 400;
-    color       : rgba($color: #000000, $alpha: 0.38);
-	text-align  : right;
-}
-
 /*--Work Section Style--*/
 
 .work__heading {
-    font-weight     : 500;
-    font-size       : 14px;
-    letter-spacing  : 0.25;
-    line-height     : 28px;
-    color           : rgba($color: #000000, $alpha: 0.87);
+    @extend %font_heading;
 }
 
 .work__duration {
@@ -111,4 +91,21 @@ header .line-on-side:after {
     @extend .work__heading;
     color      : rgba($color: #000000, $alpha: 0.54);
     font-weight: 400;
+}
+
+/*--Skill Section Style--*/
+.skill__name {
+    font-size       : 14px;
+    font-weight     : 400;
+    letter-spacing  : 1px;
+    color           : rgba($color: #000000, $alpha: 0.87);
+	text-align      : left;
+}
+
+.skill__score {
+	font-size       : 12px;
+    font-weight     : 400;
+    letter-spacing  : 1px;
+    color           : rgba($color: #000000, $alpha: 0.38);
+	text-align      : right;
 }
