--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,11 +2,16 @@
 BASIC
 -----------------------------------------------------*/
 
+html {
+    background-color: #fafafa;
+}
+
 body {
     font-family     : 'NotoSans', sans-serif, 'NotoSansCJK', '微軟正黑體', 'Microsoft JhengHei';
     max-width       : 768px;
     margin          : 0 auto;
     padding-bottom  : 64px;
+    background-color: #fff;
 }
 
 main {
